added location and position to objects
