# app/Http/Controllers/Swagger/BookingObjectController.php
@@ -91,6 +91,16 @@ use OpenApi\Annotations as OA;
  *         type="integer",
  *         description="Maximum number of persons allowed for the booking object"
  *     ),
+ *     @OA\Property(
+ *         property="location",
+ *         type="string",
+ *         description="The name of the location within the zone in which the object is located"
+ *     ),
+ *     @OA\Property(
+ *         property="position",
+ *         type="integer",
+ *         description="The position of the object in the location"
+ *     ),
  * ),
  * @OA\Schema(
  *     schema="BookingObjectForAdmin",
@@ -181,6 +191,16 @@ use OpenApi\Annotations as OA;
  *         property="max_persons",
  *         type="integer",
  *         description="Maximum number of persons allowed for the booking object"
+ *     ),
+ *     @OA\Property(
+ *         property="location",
+ *         type="string",
+ *         description="The name of the location within the zone in which the object is located"
+ *     ),
+ *     @OA\Property(
+ *         property="position",
+ *         type="integer",
+ *         description="The position of the object in the location"
  *     ),
  *     @OA\Property(
  *         property="created_at",
@@ -298,6 +318,16 @@ class BookingObjectController extends Controller
      *                     property="max_persons",
      *                     type="integer",
      *                     description="Max persons of the booking object"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="location",
+     *                     type="string",
+     *                     description="The name of the location within the zone in which the object is located"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="position",
+     *                     type="integer",
+     *                     description="The position of the object in the location"
      *                 ),
      *                 @OA\Property(
      *                     property="created_at",
@@ -433,6 +463,16 @@ class BookingObjectController extends Controller
      *                     description="Maximum number of persons allowed for the booking object"
      *                 ),
      *                 @OA\Property(
+     *                     property="location",
+     *                     type="string",
+     *                     description="The name of the location within the zone in which the object is located"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="position",
+     *                     type="integer",
+     *                     description="The position of the object in the location"
+     *                 ),
+     *                 @OA\Property(
      *                     property="lang",
      *                     type="string",
      *                     description="Specify language",
@@ -566,6 +606,16 @@ class BookingObjectController extends Controller
      *                 description="Maximum person of the booking object"
      *             ),
      *             @OA\Property(
+     *                 property="location",
+     *                 type="string",
+     *                 description="The name of the location within the zone in which the object is located"
+     *             ),
+     *             @OA\Property(
+     *                 property="position",
+     *                 type="integer",
+     *                 description="The position of the object in the location"
+     *             ),
+     *             @OA\Property(
      *                 property="created_at",
      *                 type="string",
      *                 format="date-time",
@@ -693,6 +743,16 @@ class BookingObjectController extends Controller
      *                 description="Maximum number of persons allowed for the booking object"
      *             ),
      *             @OA\Property(
+     *                 property="location",
+     *                 type="string",
+     *                 description="The name of the location within the zone in which the object is located"
+     *             ),
+     *             @OA\Property(
+     *                 property="position",
+     *                 type="integer",
+     *                 description="The position of the object in the location"
+     *             ),
+     *             @OA\Property(
      *                 property="lang",
      *                 type="string",
      *                 description="Specify language",
@@ -771,7 +831,6 @@ class BookingObjectController extends Controller
     {
         //
     }
-
 
     /**
      * @OA\Post(
@@ -878,6 +937,16 @@ class BookingObjectController extends Controller
      *                     property="max_persons",
      *                     type="integer",
      *                     description="Max persons of the booking object"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="location",
+     *                     type="string",
+     *                     description="The name of the location within the zone in which the object is located"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="position",
+     *                     type="integer",
+     *                     description="The position of the object in the location"
      *                 ),
      *                 @OA\Property(
      *                     property="created_at",
